background color blue

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>MON SITE À MOI</title>
        
 </head>
-<body style="background:white;">
+<body style="background:blue;">
 <h1 style="color: azure;margin:10% 45% 0% 45%;">Tp fpa</h1>
 </body>
 </html>
