changement de fond

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
        
 </head>
 <body style="background:white;">
-<h1 style="color: azure;margin:10% 45% 0% 45%;">Tp fpa</h1>
+<h1 style="color: blackgit checkout;margin:10% 45% 0% 45%;">Tp fpa</h1>
 </body>
 </html>
